infrastructure/kube-prometheus-stack/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 3001
      targetPort: 3000
      name: http
