infrastructure/kube-prometheus-stack/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-external
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
    prometheus: prometheus-kube-prometheus-prometheus
  ports:
    - port: 9090
      targetPort: 9090
      name: http
